deploy: b6c71c25029d452b02b2f019c7bc5c653cb29211

--- a/publication/exposure/index.html
+++ b/publication/exposure/index.html
@@ -77,7 +77,7 @@ Conclusion: Results indicate that individual differences in reward sensitivity c
 <a class=nav-link href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/#featured><span>Publications</span></a>
+<a class="nav-link active" href=/publication><span>Publications</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/mindfulness><span>Mindfulness</span></a>
