--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <a class=nav-link href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/#featured data-target=#featured><span>Publications</span></a>
+<a class=nav-link href=/publication><span>Publications</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/mindfulness><span>Mindfulness</span></a>
