--- a/project/ocd/index.html
+++ b/project/ocd/index.html
@@ -73,7 +73,7 @@
 <a class="nav-link active" href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/#featured><span>Publications</span></a>
+<a class=nav-link href=/publication><span>Publications</span></a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/mindfulness><span>Mindfulness</span></a>
