deploy: ca47d80d6c040499ac38cfcd9d501dace62e3b1a

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ October 2021
 </span>
 <span class=middot-divider></span>
 <span class=pub-publication>
-Current Opinion
+Current Opinion in Psychology
 </span>
 </div>
 <div class="section-subheading article-title mb-1 mt-3">
