--- a/publication/index.html
+++ b/publication/index.html
@@ -156,7 +156,7 @@ Bram Vervliet</span>
 </span>
 (2021).
 <a href=/publication/criteria/>Experimental models in psychopathology research: The relation between Research Domain Criteria and Experimental Psychopathology</a>.
-Current Opinion.
+Current Opinion in Psychology.
 <p>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.copsyc.2021.07.004 target=_blank rel=noopener>
 DOI
