deploy: 76b3bd5c594e65f0b3c098fc3b16e78b9e77d801

--- a/publication/exposure/index.html
+++ b/publication/exposure/index.html
@@ -77,6 +77,9 @@ Conclusion: Results indicate that individual differences in reward sensitivity c
 <a class=nav-link href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
+<a class=nav-link href=/event><span>Events</span></a>
+</li>
+<li class=nav-item>
 <a class="nav-link active" href=/publication><span>Publications</span></a>
 </li>
 <li class=nav-item>
