--- a/404.html
+++ b/404.html
@@ -70,6 +70,9 @@
 <a class=nav-link href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
+<a class=nav-link href=/event><span>Events</span></a>
+</li>
+<li class=nav-item>
 <a class=nav-link href=/publication><span>Publications</span></a>
 </li>
 <li class=nav-item>
@@ -92,8 +95,6 @@
 <p>Perhaps you were looking for one of these?</p>
 <h2>Latest</h2>
 <ul>
-<li><a href=/event/>Recent & Upcoming Talks</a></li>
-<li><a href=/talk/example-talk/>Example Talk</a></li>
 <li><a href=/publication/>Publications</a></li>
 <li><a href=/publication/fasting/>Overnight fasting affects avoidance learning and relief</a></li>
 <li><a href=/publication/criteria/>Experimental models in psychopathology research: The relation between Research Domain Criteria and Experimental Psychopathology</a></li>
@@ -102,6 +103,8 @@
 <li><a href=/publication/probiotics/>Probiotics-induced changes in gut microbial composition and its effects on cognitive performance after stress: exploratory analyses</a></li>
 <li><a href=/publication/persistent/>The role of context in persistent avoidance and the predictive value of relief</a></li>
 <li><a href=/publication/dopamine/>Dopamine: From prediction error to psychotherapy</a></li>
+<li><a href=/publication/expression/>Reward Anticipation in Early Expression of Psychotic Disorder: A Functional MRI Approach</a></li>
+<li><a href=/slides/example/>Slides</a></li>
 </ul>
 </div>
 </div>
