--- a/publication/musical/index.html
+++ b/publication/musical/index.html
@@ -77,6 +77,9 @@ Conclusions In a context of affective rivalry a musical training enhances implic
 <a class=nav-link href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
+<a class=nav-link href=/event><span>Events</span></a>
+</li>
+<li class=nav-item>
 <a class="nav-link active" href=/publication><span>Publications</span></a>
 </li>
 <li class=nav-item>
