--- a/publication/separation/index.html
+++ b/publication/separation/index.html
@@ -73,6 +73,9 @@
 <a class=nav-link href=/project><span>Projects</span></a>
 </li>
 <li class=nav-item>
+<a class=nav-link href=/event><span>Events</span></a>
+</li>
+<li class=nav-item>
 <a class="nav-link active" href=/publication><span>Publications</span></a>
 </li>
 <li class=nav-item>
