--- a/event/index.html
+++ b/event/index.html
@@ -106,9 +106,9 @@
 <div class="media stream-item view-compact">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/talk/the-brain-and-cognition-bc-seminars-a-window-into-the-hungry-brain-from-pavlovian-to-avoidance-learning./>The Brain and Cognition (B&C) seminars: A Window Into The Hungry Brain: from Pavlovian to avoidance learning.</a>
+<a href=/talk/a-window-into-the-hungry-brain-from-pavlovian-to-avoidance-learning./>A Window Into The Hungry Brain: from Pavlovian to avoidance learning.</a>
 </div>
-<a href=/talk/the-brain-and-cognition-bc-seminars-a-window-into-the-hungry-brain-from-pavlovian-to-avoidance-learning./ class=summary-link>
+<a href=/talk/a-window-into-the-hungry-brain-from-pavlovian-to-avoidance-learning./ class=summary-link>
 <div class=article-style>
 Fasting is producing a widespread flourishing commercial market with pseudoscientific advice on how to fast to feel and ‘look’ good, especially among teenagers. The empirical research is instead providing clear data that fasting should be used carefully since this practice triggers beneficial as well as harmful chemical events in the body. One of the consequences of these events is that fasting can induce significant changes in the mesolimbic dopaminergic brain, the system that tunes our learning signals. In this talk, I will present the results of our last experiments where I investigated the effects of overnight fasting (16h) on two different dopamine-based types of learning: instrumental avoidance learning and fear extinction learning, with a strong emphasis on fasting effects on relief (reward). Specifically, since exaggerating relief from threat omission might over-reinforce instrumental avoidance in the anxious clinical population, these experiments provide a window on how fasting increases relief, and, consequently, avoidance behaviors. The results that I will present can help to enhance awareness about the effects of fasting on our psychophysiological functions and can be of great importance for the clinical field.
 </div>
