deploy: 264bb88e18eccf46c4ee94c4b5a04fba98fc9c79

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 <li class=nav-item>
 <a class=nav-link href=/mindfulness><span>Mindfulness</span></a>
 </li>
+<li class=nav-item>
+<a class=nav-link href=/roots-in-nature><span>Roots in nature</span></a>
+</li>
 </ul>
 </div>
 <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
