--- a/publication/musical/index.html
+++ b/publication/musical/index.html
@@ -85,6 +85,9 @@ Conclusions In a context of affective rivalry a musical training enhances implic
 <li class=nav-item>
 <a class=nav-link href=/mindfulness><span>Mindfulness</span></a>
 </li>
+<li class=nav-item>
+<a class=nav-link href=/roots-in-nature><span>Roots in nature</span></a>
+</li>
 </ul>
 </div>
 <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
