deploy: 29d785f84b7f40a7271ff003702a65bc4336c014

--- a/roots-in-nature/index.html
+++ b/roots-in-nature/index.html
@@ -8,7 +8,7 @@
 <link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap">
 <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
 <meta name=author content="Silvia Papalini">
-<meta name=description content>
+<meta name=description content="Coming soon">
 <link rel=alternate hreflang=en-us href=https://silviapapalini.github.io/roots-in-nature/>
 <meta name=theme-color content="#1565c0">
 <link rel=stylesheet href=/css/vendor-bundle.min.f1ecf783c14edc00c9320c205831ad8e.css media=print onload="this.media='all'">
@@ -23,12 +23,12 @@
 <meta property="twitter:card" content="summary">
 <meta property="og:site_name" content="Silvia Papalini">
 <meta property="og:url" content="https://silviapapalini.github.io/roots-in-nature/">
-<meta property="og:title" content="Silvia Papalini">
-<meta property="og:description" content><meta property="og:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png">
+<meta property="og:title" content="Roots in Nature | Silvia Papalini">
+<meta property="og:description" content="Coming soon"><meta property="og:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png">
 <meta property="twitter:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png"><meta property="og:locale" content="en-us">
-<title>Silvia Papalini</title>
+<title>Roots in Nature | Silvia Papalini</title>
 </head>
-<body id=top data-spy=scroll data-offset=70 data-target=#TableOfContents class=page-wrapper data-wc-page-id=5717fd2060518d662b73dc06f22de4b9>
+<body id=top data-spy=scroll data-offset=70 data-target=#TableOfContents class=page-wrapper data-wc-page-id=16e559fce92ed094739f2a51f4677b6b>
 <script src=/js/wowchemy-init.min.8f76bdc9e086322ed5147724ebba3d06.js></script>
 <aside class=search-modal id=search>
 <div class=container>
@@ -92,12 +92,13 @@
 <div class=page-body>
 <article class=article>
 <div class="article-container pt-3">
-<h1></h1>
+<h1>Roots in Nature</h1>
 <div class=article-metadata>
 </div>
 </div>
 <div class=article-container>
 <div class=article-style>
+<p>Coming soon</p>
 </div>
 </div>
 </article>
