deploy: f6cf4669530b54347f1b7e6ae05cd2c45b2b1dd9

--- a/roots-in-nature/index.html
+++ b/roots-in-nature/index.html
@@ -8,7 +8,8 @@
 <link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap">
 <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
 <meta name=author content="Silvia Papalini">
-<meta name=description content="Coming soon">
+<meta name=description content="In many ways, my approach to research and interest in mindful eating are connected to Nature.
+Nature might seem something far away from a scientist who spends most of her time in the LAB.">
 <link rel=alternate hreflang=en-us href=https://silviapapalini.github.io/roots-in-nature/>
 <meta name=theme-color content="#1565c0">
 <link rel=stylesheet href=/css/vendor-bundle.min.f1ecf783c14edc00c9320c205831ad8e.css media=print onload="this.media='all'">
@@ -24,7 +25,8 @@
 <meta property="og:site_name" content="Silvia Papalini">
 <meta property="og:url" content="https://silviapapalini.github.io/roots-in-nature/">
 <meta property="og:title" content="Roots in Nature | Silvia Papalini">
-<meta property="og:description" content="Coming soon"><meta property="og:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png">
+<meta property="og:description" content="In many ways, my approach to research and interest in mindful eating are connected to Nature.
+Nature might seem something far away from a scientist who spends most of her time in the LAB."><meta property="og:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png">
 <meta property="twitter:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png"><meta property="og:locale" content="en-us">
 <title>Roots in Nature | Silvia Papalini</title>
 </head>
@@ -98,7 +100,11 @@
 </div>
 <div class=article-container>
 <div class=article-style>
-<p>Coming soon</p>
+<p>In many ways, my approach to research and interest in mindful eating are connected to Nature.</p>
+<p>Nature might seem something far away from a scientist who spends most of her time in the LAB. Fortunately, I had the greatest luck to grow up in a beautiful and peaceful place (Castell&rsquo;Azzara) in the middle of Italy, and to stay close to the work of one of my best teachers in life: my brother, Leo.</p>
+<p>Leo coultivates olive trees and produces fresh olive oil every year. His love and respect for Nature are so deeply honest that it is diffucult to do not get inspired by the way he does its job (I would better call it passion or value). Leo is interested in learning how to help grow and reproduce the olive trees, follows courses to learn about the best way of pruning in its geographic region, checks its olive trees every day to be sure they get enough water and nutrients that can protect them from diseases when seasons change or are particularly harsh. In few words Leo builded up its own LAB. I followed its teaching, picking my own trees of interest (people), but maintaining that why of connection with and caring for nature.</p>
+<p>The fresh olive oil comes from his hard work of harvest in November (about 300 plants) when me and the rest of the family are trying to help him with some manual work. Yes, I said manual. Why? Leo wants to avoid damaging the trees during their production with aggressive machines that could break their branches. The olives are picked carefully, and brough as soon as possible to the local oil mill to avoid the formation of molds and bacteria. Once the oil is ready, he checks its color, odor, and density. He tastes the olive oil with all its senses, in silent connection with its body. My brother is a great mindfuleating teacher on his own LAB, and he doesn&rsquo;t know (and it dosen&rsquo;t have to). During my mindful eating training in Norway, I could see a strong parallel between my brother&rsquo;s way to relate to food and eating and the teaching of the masters. It felt very familiar.</p>
+<p>Nature, the eternal mother, is a great place to find answers if you are connect it to it; that&rsquo;s what Leo would tell me when difficult questions arise in life, either scientific or personal.</p>
 </div>
 </div>
 </article>
