deploy: 5e5ebaad847bcec56ee220691f660d59bcf250f0

--- a/about/index.html
+++ b/about/index.html
@@ -8,14 +8,14 @@
 <link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap">
 <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
 <meta name=author content="Silvia Papalini">
-<meta name=description content="Silvia  My accademic path I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first Ph.D. in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans.">
+<meta name=description content="Silvia  My accademic path   I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first Ph.D. in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans.">
 <link rel=alternate hreflang=en-us href=https://silviapapalini.github.io/about/>
 <meta name=theme-color content="#1565c0">
 <link rel=stylesheet href=/css/vendor-bundle.min.f1ecf783c14edc00c9320c205831ad8e.css media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin=anonymous media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css crossorigin=anonymous title=hl-light media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css crossorigin=anonymous title=hl-dark media=print onload="this.media='all'" disabled>
-<link rel=stylesheet href=/css/wowchemy.246129d782c938a644fe2d653d8a976f.css>
+<link rel=stylesheet href=/css/wowchemy.6d518496de7da4049775252c54a86866.css>
 <link rel=manifest href=/manifest.webmanifest>
 <link rel=icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_32x32_fill_lanczos_center_3.png>
 <link rel=apple-touch-icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_180x180_fill_lanczos_center_3.png>
@@ -24,7 +24,7 @@
 <meta property="og:site_name" content="Silvia Papalini">
 <meta property="og:url" content="https://silviapapalini.github.io/about/">
 <meta property="og:title" content="About me | Silvia Papalini">
-<meta property="og:description" content="Silvia  My accademic path I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first Ph.D. in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans."><meta property="og:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png">
+<meta property="og:description" content="Silvia  My accademic path   I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first Ph.D. in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans."><meta property="og:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png">
 <meta property="twitter:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png"><meta property="og:locale" content="en-us">
 <title>About me | Silvia Papalini</title>
 </head>
@@ -107,6 +107,12 @@
 Silvia
 </figcaption></figure>
 <h2 id=my-accademic-path>My accademic path</h2>
+<figure class=floatright>
+<div class="d-flex justify-content-center">
+<div class=w-100><img alt srcset="/about/silvia_hu919e1f5988953d270124f7d811fab6e8_1146442_5ff89391ecd3b62b62c59e0555ae413d.webp 400w,
+/about/silvia_hu919e1f5988953d270124f7d811fab6e8_1146442_3a539c92adc1d44bcdb44d79d914bf94.webp 760w,
+/about/silvia_hu919e1f5988953d270124f7d811fab6e8_1146442_1200x1200_fit_q75_h2_lanczos.webp 1200w" src=/about/silvia_hu919e1f5988953d270124f7d811fab6e8_1146442_5ff89391ecd3b62b62c59e0555ae413d.webp width=529 height=760 loading=lazy data-zoomable></div>
+</div></figure>
 <p>I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first Ph.D. in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans. I developed my scientific knowledge on reward-processing and neuroimaging skills also working in collaboration with the Maastricht University (The Netherlands) via an Erasmus+ European grant. In 2016, I became a member of the &lsquo;Food and Cognition group&rsquo; at the Donders Institute (The Netherlands) where I investigated the effects of a probiotic diet on neuro-cognition and stress, with a focus on cognitive control mechanisms. In 2018, I started a second Ph.D. at KULeuven with the aim to translate knowledge from fundamental research to the clinical field.</p>
 <h2 id=my-research>My research</h2>
 <p>The final aim of my research is to help people that struggle with excessive anxiety and emotional (non)eating. I am fascinated by the bidirectional relationship between food and learning. Currently, I am investigating the effects of overnight fasting and the role of dopamine-mediated mechanisms (i.e., relief) on conditioning, error-based learning, and instrumental avoidance. I am conducting research in healthy individuals as well as in individuals with pathological control and excessive avoidance behaviors (i.e., anorexia nervosa and obsessive-compulsive disorder). In my research, I like to apply an interdisciplinary approach, integrating behavioral research, nutritional science, and neuroimaging (3TfMRI). To transfer my scientific knowledge to the applied field I have participated in the Mindful Eating professional training (ME-CL1) and became a Mindful Eating teacher in training.</p>
