deploy: 8e0f7ed72b9d1e5cd3487115eda8140639d120e7

--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
 <link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap">
 <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
 <meta name=author content="Silvia Papalini">
-<meta name=description content="Silvia  My accademic path   I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first Ph.D. in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans.">
+<meta name=description content="My accademic path   I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first Ph.D. in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans.">
 <link rel=alternate hreflang=en-us href=https://silviapapalini.github.io/about/>
 <meta name=theme-color content="#1565c0">
 <link rel=stylesheet href=/css/vendor-bundle.min.f1ecf783c14edc00c9320c205831ad8e.css media=print onload="this.media='all'">
@@ -24,7 +24,7 @@
 <meta property="og:site_name" content="Silvia Papalini">
 <meta property="og:url" content="https://silviapapalini.github.io/about/">
 <meta property="og:title" content="About me | Silvia Papalini">
-<meta property="og:description" content="Silvia  My accademic path   I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first Ph.D. in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans."><meta property="og:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png">
+<meta property="og:description" content="My accademic path   I hold a Master&rsquo;s degree in Experimental Psychology and obtained my first Ph.D. in Psychological Sciences at the University of Florence (UniFi), Italy, conducting basic research on reward-related brain processes in humans."><meta property="og:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png">
 <meta property="twitter:image" content="https://silviapapalini.github.io/media/icon_hu3434e75fda98e98001121022ebf30715_650_512x512_fill_lanczos_center_3.png"><meta property="og:locale" content="en-us">
 <title>About me | Silvia Papalini</title>
 </head>
@@ -98,14 +98,6 @@
 </div>
 <div class=article-container>
 <div class=article-style>
-<figure class=floatleft id=figure-silvia>
-<div class="d-flex justify-content-center">
-<div class=w-100><img alt=Silvia srcset="/about/silvia_hu919e1f5988953d270124f7d811fab6e8_1146442_5ff89391ecd3b62b62c59e0555ae413d.webp 400w,
-/about/silvia_hu919e1f5988953d270124f7d811fab6e8_1146442_3a539c92adc1d44bcdb44d79d914bf94.webp 760w,
-/about/silvia_hu919e1f5988953d270124f7d811fab6e8_1146442_1200x1200_fit_q75_h2_lanczos.webp 1200w" src=/about/silvia_hu919e1f5988953d270124f7d811fab6e8_1146442_5ff89391ecd3b62b62c59e0555ae413d.webp width=529 height=760 loading=lazy data-zoomable></div>
-</div><figcaption>
-Silvia
-</figcaption></figure>
 <h2 id=my-accademic-path>My accademic path</h2>
 <figure class=floatright>
 <div class="d-flex justify-content-center">
