deploy: 211168abfece112a6c5059c6ee2cedbba33d2f61

--- a/publication/stress/index.html
+++ b/publication/stress/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=generator content="Wowchemy 5.4.0 for Hugo">
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap">
-<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
+<link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap">
+<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap" media=print onload="this.media='all'">
 <meta name=author content="Silvia Papalini">
 <meta name=description content="Probiotics are microorganisms that provide health benefits when consumed. In animals, probiotics reverse gut microbiome-related alterations in depression-like symptoms, in cognition, and in hormonal stress response. However, in humans, a causal understanding of the gut-brain link in emotion and cognition is lacking. Additionally, whether the effects of probiotics on neurocognition are visible only in presence of stress, remains unclear. We investigated the effects of a multispecies probiotic (Ecologic®Barrier) on specific neurocognitive measures of emotion reactivity, emotion regulation, and cognitive control using fMRI. Critically, we also tested whether probiotics can buffer against the detrimental effects of acute stress on working memory. In a double blind, randomized, placebo-controlled, between-subjects intervention study, 58 healthy participants were tested once before and once after a 28-day intervention. Without stress induction, probiotics did not affect brain, behavioral, or related self-report measures. However, relative to placebo, the probiotics group did show a significant stress-related increase in working memory performance after supplementation. This change was associated with intervention-related neural changes in frontal cortex during cognitive control exclusively in the probiotics group. Overall, our results show neurocognitive effects of a multispecies probiotic in healthy women only under challenging situations, buffering against the detrimental effects of stress on cognition.">
 <link rel=alternate hreflang=en-us href=https://silviapapalini.github.io/publication/stress/>
@@ -15,7 +15,7 @@
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin=anonymous media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css crossorigin=anonymous title=hl-light media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css crossorigin=anonymous title=hl-dark media=print onload="this.media='all'" disabled>
-<link rel=stylesheet href=/css/wowchemy.6d518496de7da4049775252c54a86866.css>
+<link rel=stylesheet href=/css/wowchemy.d55baca227a9d61c322f1b7b57c32054.css>
 <link rel=manifest href=/manifest.webmanifest>
 <link rel=icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_32x32_fill_lanczos_center_3.png>
 <link rel=apple-touch-icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_180x180_fill_lanczos_center_3.png>
