--- a/roots-in-nature/index.html
+++ b/roots-in-nature/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=generator content="Wowchemy 5.4.0 for Hugo">
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap">
-<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
+<link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap">
+<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap" media=print onload="this.media='all'">
 <meta name=author content="Silvia Papalini">
 <meta name=description content="In many ways, my approach to research and interest in mindful eating are connected to Nature.
 Nature might seem something far away from a scientist who spends most of her time in the LAB, but that is only partially true.">
@@ -16,7 +16,7 @@ Nature might seem something far away from a scientist who spends most of her tim
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin=anonymous media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css crossorigin=anonymous title=hl-light media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css crossorigin=anonymous title=hl-dark media=print onload="this.media='all'" disabled>
-<link rel=stylesheet href=/css/wowchemy.6d518496de7da4049775252c54a86866.css>
+<link rel=stylesheet href=/css/wowchemy.d55baca227a9d61c322f1b7b57c32054.css>
 <link rel=manifest href=/manifest.webmanifest>
 <link rel=icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_32x32_fill_lanczos_center_3.png>
 <link rel=apple-touch-icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_180x180_fill_lanczos_center_3.png>
@@ -100,6 +100,12 @@ Nature might seem something far away from a scientist who spends most of her tim
 </div>
 <div class=article-container>
 <div class=article-style>
+<figure class=floatright>
+<div class="d-flex justify-content-center">
+<div class=w-100><img alt srcset="/roots-in-nature/olives_hu3d0adf75ebe5eb1f1e03d77c00bb3087_386283_db2a0959c0a9be4c5f8c8529f342225b.webp 400w,
+/roots-in-nature/olives_hu3d0adf75ebe5eb1f1e03d77c00bb3087_386283_36e050ab4cd293473a96ddf9232fb35c.webp 760w,
+/roots-in-nature/olives_hu3d0adf75ebe5eb1f1e03d77c00bb3087_386283_1200x1200_fit_q75_h2_lanczos.webp 1200w" src=/roots-in-nature/olives_hu3d0adf75ebe5eb1f1e03d77c00bb3087_386283_db2a0959c0a9be4c5f8c8529f342225b.webp width=570 height=760 loading=lazy data-zoomable></div>
+</div></figure>
 <p>In many ways, my approach to research and interest in mindful eating are connected to Nature.</p>
 <p>Nature might seem something far away from a scientist who spends most of her time in the LAB, but that is only partially true. Fortunately, I had the greatest luck to grow up in a beautiful and peaceful place (Castell&rsquo;Azzara) in the middle of Italy, and to stay close to the work of one of my best teachers in life: my brother, Leo.</p>
 <p>Leo coultivates olive trees and produces fresh olive oil every year. His love and respect for Nature are so deeply honest that it is difficult to do not get inspired by the way he does his job (I would better call it passion or value). Leo is interested in learning how to help grow and reproduce the olive trees, follows courses to learn about the best way of pruning in its geographic region, checks its olive trees every day to be sure they get enough water and nutrients that can protect them from diseases when seasons change or are particularly harsh. In few words Leo builded up his own LAB. I followed his teaching, picking &lsquo;my own&rsquo; trees of interest (people), but maintaining that way of connection with/ and caring for nature.</p>
