--- a/publication/expression/index.html
+++ b/publication/expression/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=generator content="Wowchemy 5.4.0 for Hugo">
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap">
-<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
+<link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap">
+<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap" media=print onload="this.media='all'">
 <meta name=author content="Silvia Papalini">
 <meta name=description content="Previous research in patients with psychotic disorder has shown widespread abnormalities in brain activation during reward anticipation. Research at the level of subclinical psychotic experiences in individuals unexposed to antipsychotic medication is limited with inconclusive results. Therefore, brain activation during reward anticipation was examined in a larger sample of individuals with subclinical psychotic experiences (PE). Participants in the PE-group were included based on CAPE scores. A sample of emerging adults aged 16–26 years (n = 47) with PE and healthy controls (HC) (n = 40) underwent fMRI scanning. The Monetary Incentive Delay task was conducted with cues related to win, loss or neutral conditions. fMRI nonparametric tests were used to examine the reward versus neutral cue contrast. A significant main effect of the large win (€3.00) > neutral contrast was found in both groups showing activation in many brain areas, including classic reward regions. Whole brain analysis on the group comparison regarding the large win > neutral contrast showed significantly decreased activation in the right insula, putamen and supramarginal gyrus in the PE-group compared to controls. There was no group difference in the hypothesized reward-related region. Decreased activation in the right insula, putamen and supramarginal gyrus during reward anticipation in individuals with PE may be consistent with altered processing of sensory information, related to decreased emotional valuing and motivational tendencies and/or altered motor-cognitive processes. The absence of group differences in striatal activation suggests that activation here is intact in the earliest stages of psychosis and may exhibit progressive deterioration in as the disease develops.">
 <link rel=alternate hreflang=en-us href=https://silviapapalini.github.io/publication/expression/>
@@ -15,7 +15,7 @@
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin=anonymous media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css crossorigin=anonymous title=hl-light media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css crossorigin=anonymous title=hl-dark media=print onload="this.media='all'" disabled>
-<link rel=stylesheet href=/css/wowchemy.6d518496de7da4049775252c54a86866.css>
+<link rel=stylesheet href=/css/wowchemy.d55baca227a9d61c322f1b7b57c32054.css>
 <link rel=manifest href=/manifest.webmanifest>
 <link rel=icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_32x32_fill_lanczos_center_3.png>
 <link rel=apple-touch-icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_180x180_fill_lanczos_center_3.png>
