--- a/publication/prolonged/index.html
+++ b/publication/prolonged/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=generator content="Wowchemy 5.4.0 for Hugo">
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap">
-<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
+<link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap">
+<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap" media=print onload="this.media='all'">
 <meta name=author content="Silvia Papalini">
 <meta name=description content="Brain functioning requires glucose utilization; however, glucose is a limited resource for the organism, by depending mainly on our food consumption. Prolonged fasting can inevitably reduce the amount of glucose necessary to maintain neuronal activities and therefore, can negatively affect cognitive processes. To date, fasting for esthetical reasons or for unhealthy habits are the common behaviors that lead to low blood glucose levels; however, their effects on brain functioning, such as memory processes, attention levels, and self-control are still poorly investigated. The present work wants to summarize some of the most recent evidences on prolonged fasting effects on brain functioning and attempts to integrate these evidences in a recent model of self-regulation. Additionally, the consequences of low blood glucose levels on neuronal activities (fMRI) are described and discussed from the practical and clinical point of view. Overall, prolonged fasting and subsequent low blood glucose levels seem to decrease self-regulation abilities and negatively affect the attentional system. These results suggest that glucose levels need to be taken in account in fMRI protocols and monitored in circumstances where brain functioning is already compromised, such as in dementia and psychiatric conditions.">
 <link rel=alternate hreflang=en-us href=https://silviapapalini.github.io/publication/prolonged/>
@@ -15,7 +15,7 @@
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin=anonymous media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css crossorigin=anonymous title=hl-light media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css crossorigin=anonymous title=hl-dark media=print onload="this.media='all'" disabled>
-<link rel=stylesheet href=/css/wowchemy.6d518496de7da4049775252c54a86866.css>
+<link rel=stylesheet href=/css/wowchemy.d55baca227a9d61c322f1b7b57c32054.css>
 <link rel=manifest href=/manifest.webmanifest>
 <link rel=icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_32x32_fill_lanczos_center_3.png>
 <link rel=apple-touch-icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_180x180_fill_lanczos_center_3.png>
