--- a/publication/separation/index.html
+++ b/publication/separation/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=generator content="Wowchemy 5.4.0 for Hugo">
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap">
-<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
+<link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap">
+<link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cutive+Mono&family=Josefin+Sans:wght@300&display=swap" media=print onload="this.media='all'">
 <meta name=author content="Silvia Papalini">
 <meta name=description content="Fear generalization is a prominent feature of anxiety disorders and post-traumatic stress disorder (PTSD). It is defined as enhanced fear responding to a stimulus that bears similarities, but is not identical to a threatening stimulus. Pattern separation, a hippocampal-dependent process, is critical for stimulus discrimination; it transforms similar experiences or events into non-overlapping representations. This study is the first in humans to investigate the extent to which fear generalization relies on behavioral pattern separation abilities. Participants (N = 46) completed a behavioral task taxing pattern separation, and a neuroimaging fear conditioning and generalization paradigm. Results show an association between lower behavioral pattern separation performance and increased generalization in shock expectancy scores, but not in fear ratings. Furthermore, lower behavioral pattern separation was associated with diminished recruitment of the subcallosal cortex during presentation of generalization stimuli. This region showed functional connectivity with the orbitofrontal cortex and ventromedial prefrontal cortex. Together, the data provide novel experimental evidence that pattern separation is related to generalization of threat expectancies, and reduced fear inhibition processes in frontal regions. Deficient pattern separation may be critical in overgeneralization and therefore may contribute to the pathophysiology of anxiety disorders and PTSD.">
 <link rel=alternate hreflang=en-us href=https://silviapapalini.github.io/publication/separation/>
@@ -15,7 +15,7 @@
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin=anonymous media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css crossorigin=anonymous title=hl-light media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css crossorigin=anonymous title=hl-dark media=print onload="this.media='all'" disabled>
-<link rel=stylesheet href=/css/wowchemy.6d518496de7da4049775252c54a86866.css>
+<link rel=stylesheet href=/css/wowchemy.d55baca227a9d61c322f1b7b57c32054.css>
 <link rel=manifest href=/manifest.webmanifest>
 <link rel=icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_32x32_fill_lanczos_center_3.png>
 <link rel=apple-touch-icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_180x180_fill_lanczos_center_3.png>
