--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin=anonymous media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css crossorigin=anonymous title=hl-light media=print onload="this.media='all'">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css crossorigin=anonymous title=hl-dark media=print onload="this.media='all'" disabled>
-<link rel=stylesheet href=/css/wowchemy.d55baca227a9d61c322f1b7b57c32054.css>
+<link rel=stylesheet href=/css/wowchemy.3b3537b4a7657bb58aad14bdc71d3e48.css>
 <link rel=manifest href=/manifest.webmanifest>
 <link rel=icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_32x32_fill_lanczos_center_3.png>
 <link rel=apple-touch-icon type=image/png href=/media/icon_hu3434e75fda98e98001121022ebf30715_650_180x180_fill_lanczos_center_3.png>
@@ -109,7 +109,7 @@
 <h2 id=my-research>My research</h2>
 <p>The final aim of my research is to help people that struggle with excessive anxiety and emotional (non)eating. I am fascinated by the bidirectional relationship between food and learning. Currently, I am investigating the effects of overnight fasting and the role of dopamine-mediated mechanisms (i.e., relief) on conditioning, error-based learning, and instrumental avoidance. I am conducting research in healthy individuals as well as in individuals with pathological control and excessive avoidance behaviors (i.e., anorexia nervosa and obsessive-compulsive disorder). In my research, I like to apply an interdisciplinary approach, integrating behavioral research, nutritional science, and neuroimaging (3TfMRI). To transfer my scientific knowledge to the applied field I have participated in the Mindful Eating professional training (ME-CL1) and became a Mindful Eating teacher in training.</p>
 <h2 id=my-future-aspirations-as-researcher>My future aspirations as researcher</h2>
-<p>Currently, I am a European Research Council (ERC) starting grant aspirant/applicant. If founded, my ERC project will focus on the fondamental learning processes underpinning excessive emotional eating.</p>
+<p>Currently, I am a European Research Council (ERC) starting grant aspirant/applicant. If founded, my ERC project will focus on the fundamental learning processes underpinning excessive emotional eating.</p>
 </div>
 </div>
 </article>
