deploy: 546d9447b603e8bc3f878aa8209cbf3f99ff41a8

--- a/talk/a-window-into-the-hungry-brain-from-pavlovian-to-avoidance-learning./index.html
+++ b/talk/a-window-into-the-hungry-brain-from-pavlovian-to-avoidance-learning./index.html
@@ -125,7 +125,7 @@ Apr 19, 2022 2:00 PM
 <div class=row>
 <div class="col-12 col-md-3 pub-row-heading">Event</div>
 <div class="col-12 col-md-9">
-The Brain and Cognition (B&C) seminars - Online
+The Brain and Cognition (B&C) seminars
 </div>
 </div>
 </div>
