deploy: 102381e3743af10436dcdf1af14e16e67fc802c7

--- a/mindfulness/index.html
+++ b/mindfulness/index.html
@@ -93,6 +93,9 @@
 </div>
 <div class=page-body>
 <article class=article>
+<div class=article-header>
+<img src=/media/vegi-header.jpg width=1999 height=383 class=article-banner alt>
+</div>
 <div class="article-container pt-3">
 <h1>Mindfulness Eating</h1>
 <div class=article-metadata>
