deploy: d9ca3b8de0ea60aecfa426a9fbf313987400c5b1

--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
 <h1>Biography</h1>
 <div class=article-style>
 <p>Silvia Papalini is a Ph.D. student currently working at the KULeuven University, Belgium, and a Mindful Eating teacher in training since 2018. Her area of research focuses on fear and reward-based learning within the context of nutritional and behavioral neuroscience (functional Magnetic Resonance Imaging, fMRI), fasting, and stress.</p>
+<figure>
+<div class="d-flex justify-content-center">
+<div class=w-100><img alt srcset="/media/fmri_hu662e9e7b31bec62e36dc0c017113be04_273068_7a702f4793d0f16a6df08380ad7d38f0.webp 400w,
+/media/fmri_hu662e9e7b31bec62e36dc0c017113be04_273068_f91bb1ff7343235b6c580825b12f2d00.webp 760w,
+/media/fmri_hu662e9e7b31bec62e36dc0c017113be04_273068_1200x1200_fit_q75_h2_lanczos.webp 1200w" src=/media/fmri_hu662e9e7b31bec62e36dc0c017113be04_273068_7a702f4793d0f16a6df08380ad7d38f0.webp width=760 height=566 loading=lazy data-zoomable></div>
+</div></figure>
 </div>
 <div class=row>
 </div>
