--- a/publication/index.html
+++ b/publication/index.html
@@ -92,6 +92,9 @@
 </header>
 </div>
 <div class=page-body>
+<div class=article-header>
+<img src=/media/books.jpg width=1905 height=343 class=article-banner alt>
+</div>
 <div class="universal-wrapper pt-3">
 <h1>Publications</h1>
 </div>
