deploy: 19747462be3fc6fb37479c2be8df6bd928a6f830

--- a/publication/musical/index.html
+++ b/publication/musical/index.html
@@ -91,6 +91,22 @@ Conclusions In a context of affective rivalry a musical training enhances implic
 </ul>
 </div>
 <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
+<li class="nav-item dropdown theme-dropdown">
+<a href=# class=nav-link data-toggle=dropdown aria-haspopup=true aria-label="Display preferences">
+<i class="fas fa-moon" aria-hidden=true></i>
+</a>
+<div class=dropdown-menu>
+<a href=# class="dropdown-item js-set-theme-light">
+<span>Light</span>
+</a>
+<a href=# class="dropdown-item js-set-theme-dark">
+<span>Dark</span>
+</a>
+<a href=# class="dropdown-item js-set-theme-auto">
+<span>Automatic</span>
+</a>
+</div>
+</li>
 </ul>
 </div>
 </nav>
