--- a/roots-in-nature/index.html
+++ b/roots-in-nature/index.html
@@ -86,6 +86,22 @@ Nature might seem something far away from a scientist who spends most of her tim
 </ul>
 </div>
 <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
+<li class="nav-item dropdown theme-dropdown">
+<a href=# class=nav-link data-toggle=dropdown aria-haspopup=true aria-label="Display preferences">
+<i class="fas fa-moon" aria-hidden=true></i>
+</a>
+<div class=dropdown-menu>
+<a href=# class="dropdown-item js-set-theme-light">
+<span>Light</span>
+</a>
+<a href=# class="dropdown-item js-set-theme-dark">
+<span>Dark</span>
+</a>
+<a href=# class="dropdown-item js-set-theme-auto">
+<span>Automatic</span>
+</a>
+</div>
+</li>
 </ul>
 </div>
 </nav>
@@ -93,6 +109,10 @@ Nature might seem something far away from a scientist who spends most of her tim
 </div>
 <div class=page-body>
 <article class=article>
+<div class=article-header>
+<img src=/media/roots.jpg width=960 height=199 class=article-banner alt="CCO Max Pixel">
+<span class=article-header-caption>CCO Max Pixel</span>
+</div>
 <div class="article-container pt-3">
 <h1>Roots in Nature</h1>
 <div class=article-metadata>
