deploy: 8d4fdc316e2fb444fb0a5f8d7ce3b1a84370b7da

--- a/publication/index.html
+++ b/publication/index.html
@@ -423,6 +423,17 @@ DOI
 </p>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-0001">
+<div class="pub-list-item view-citation" style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+</span>
+(0001).
+<a href=/publication/fasting_fmri/></a>.
+<p>
+</p>
+</div>
+</div>
 </div>
 </div>
 </div>
