deploy: d6fa00ffadfd0f4ceb2c0778e1ef1734a5887ea6

--- a/project/fasting/index.html
+++ b/project/fasting/index.html
@@ -149,6 +149,29 @@ Bram Vervliet</span>
 <div class=ml-3>
 </div>
 </div>
+<div class="media stream-item view-compact">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/publication/fasting_fmri/>A Window Into The Hungry Brain: overnight fasting effects on the neurobiology of avoidance learning and relief</a>
+</div>
+<a href=/publication/fasting_fmri/ class=summary-link>
+<div class=article-style>
+Scientific paper in preparation
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Tom Beckers</span>, <span>
+Lukas Van Oudenhove</span>, <span>
+Bram Vervliet</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
 </div>
 </div>
 </article>
