--- a/publication/index.html
+++ b/publication/index.html
@@ -427,10 +427,18 @@ DOI
 <div class="pub-list-item view-citation" style=margin-bottom:1rem>
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
+<span class=author-highlighted>
+Silvia Papalini</span>, <span>
+Tom Beckers</span>, <span>
+Lukas Van Oudenhove</span>, <span>
+Bram Vervliet</span>
 </span>
 (0001).
-<a href=/publication/fasting_fmri/></a>.
+<a href=/publication/fasting_fmri/>A Window Into The Hungry Brain: overnight fasting effects on the neurobiology of avoidance learning and relief</a>.
 <p>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/project/fasting/>
+Project
+</a>
 </p>
 </div>
 </div>
