deploy: 9498bf28ad0434518e02224afc8cce86f9e1e512

--- a/publication/index.html
+++ b/publication/index.html
@@ -434,7 +434,7 @@ Lukas Van Oudenhove</span>, <span>
 Bram Vervliet</span>
 </span>
 (0001).
-<a href=/publication/fasting_fmri/>A Window Into The Hungry Brain: overnight fasting effects on the neurobiology of avoidance learning and relief</a>.
+<a href=/publication/fasting_fmri/>A Window Into The Hungry Brain: overnight fasting effects on the neurobiology of avoidance learning and relief -- Scientific paper in preparation</a>.
 <p>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=/project/fasting/>
 Project
