--- a/project/fasting/index.html
+++ b/project/fasting/index.html
@@ -152,7 +152,7 @@ Bram Vervliet</span>
 <div class="media stream-item view-compact">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/publication/fasting_fmri/>A Window Into The Hungry Brain: overnight fasting effects on the neurobiology of avoidance learning and relief</a>
+<a href=/publication/fasting_fmri/>A Window Into The Hungry Brain: overnight fasting effects on the neurobiology of avoidance learning and relief -- Scientific paper in preparation</a>
 </div>
 <a href=/publication/fasting_fmri/ class=summary-link>
 <div class=article-style>
